--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,103 @@
 body {
     color: #fff;
+    font-family: 'Love Ya Like A Sister', cursive;
 }
 .header {
     text-align: center;
-    padding-top: 100px;
+    padding-top: 50px;
+    font-size: 45px;    
+    text-shadow: 4px 4px #482913;
+}
+.instructions {
+    font-size: 20px;
+    padding: 13px;
+    text-align: center;
+    color: #482913;
+    padding-bottom: 30px;
 }
 .game-container {
     width: 500px;
     margin: 0 auto;
     height: 750px;
-    background-image: url("../images/ocean.jpg");
+    background-image: url("../images/catbackground.jpg");
 }
-.goal, .total, .scoreboard {
+.label {
+    float: left;
+    padding-left: 90px;
+    text-shadow: 4px 4px #482913;
+}
+#goalTotal, #playerTotal {
+    float: right;
+    padding-right: 90px;
+    text-shadow: 3px 3px #482913;
+}
+.goal, .total {
     width: 375px;
     margin: 0 auto;
-    border: 1px solid #fff;
+    font-size: 35px;
 }
-.goal, .total, .scoreboard {
-    height: 100px;
+.goal, .total {
+    height: 50px;
+}
+#reaction-img {
+    height: 150px;
+    text-align: center;
+}
+#reaction-img img {
+    height: 125px;
+    width: auto;
+    padding-top: 15px;
 }
 .sushi {
-    width: 375px;
+    width: 500px;
     height: auto;
-    margin: 0 auto;
-    /*cursor: url("../images/chopsticks2.png"), auto;*/
+    margin-bottom: 30px;
+    cursor: url("../images/chopsticks2.png"), auto;
 }
 #sushi-1, #sushi-2, #sushi-3, #sushi-4 {
-    width: 20%;
+    width: 12%;
     display: inline-block;
     padding: 2%;
     padding-top: 30px;
-    padding-bottom: 30px;
-    margin: 20px 0 20px 0;
+    padding-left: 9%;
+    margin: 0 auto;
 }
-.label {
-    display: block;
+#sushi-1:hover, #sushi-2:hover, #sushi-3:hover, #sushi-4:hover {
+    width: 17%;
+    margin: 0;
+    padding-left: 6%;
+}
+.scoreboard {
+    font-size: 25px;
+    text-shadow: 2px 2px #482913;
+
+}
+#feedback {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #482913;
+    text-shadow: 2px 2px #F2E2D3;
+}
+.label-score {
+    text-align: center;
+    margin-bottom: 15px;
+    font-size: 30px;
+
+}
+.label-wins {
+    display: inline-block;
+    margin-left: 27%;
+}
+#scoreboard-wins {
+    display: inline-block;
+    margin-right: 10%;
+    padding-left: 5px;
+}
+.label-losses {
+    display: inline-block;
+}
+#scoreboard-losses {
+    display: inline-block;
+    padding-left: 5px;
 }
